[package]
name = "submission"
version = "0.1.0"
edition = "2018"

[dependencies]
cfg-if = "1"
futures-lite = "1"
pin-project-lite = "0.2.9"
slab = "0.4"

[target.'cfg(target_os = "linux")'.dependencies]
async-io = "1"
io-uring = { version = "=0.5.6", features = ["unstable"] }
libc = "0.2"

[dev-dependencies]
async-io = "1"
blocking = "1"
pin-utils = "0.1.0"
