[package]
name = "submission"
version = "0.1.0"
edition = "2018"

[dependencies]
cfg-if = "1"
futures-lite = "1"
log = "0.4"

[target.'cfg(target_os = "linux")'.dependencies]
async-io = "1"
io-uring = { version = "=0.5.6", features = ["unstable"] }
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies.windows-sys]
version = "0.36"
features = [
    "Win32_System_IO",
    "Win32_Foundation",
    "Win32_System_WindowsProgramming"
]

[target.'cfg(target_os = "windows")'.dependencies]
blocking = "1"
pin-project-lite = "0.2.9"

[dev-dependencies]
async-io = "1"
blocking = "1"
criterion = "0.4.0"
pin-utils = "0.1.0"

[[bench]]
name = "submit"
harness = false
