[package]
name = "submission"
version = "0.1.0"
edition = "2018"
authors = ["John Nunley <jtnunley01@gmail.com>"]
description = "Portable API for completion-based submission of tasks"
repository = "https://github.com/notgull/async-filelike"
homepage = "https://github.com/notgull/async-filelike#readme"
keywords = ["io_uring", "async", "completion", "iocp"]

[dependencies]
async-lock = "2.5.0"
cfg-if = "1"
futures-lite = "1"
log = "0.4"

[target.'cfg(target_os = "linux")'.dependencies]
async-io = "1"
io-uring = { version = "=0.5.6", features = ["unstable"] }
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies.windows-sys]
version = "0.36"
features = [
    "Win32_System_IO",
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_WindowsProgramming"
]

[target.'cfg(target_os = "windows")'.dependencies]
blocking = "1"
concurrent-queue = "1.2.4"
pin-project-lite = "0.2.9"

[dev-dependencies]
async-io = "1"
blocking = "1"
criterion = "0.4.0"
env_logger = "0.9.0"
pin-utils = "0.1.0"

[[bench]]
name = "submit"
harness = false
